--- a/SPAirlines/src/main/resources/application.properties
+++ b/SPAirlines/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=SPAirlines
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=1234ASDF
+spring.jpa.hibernate.ddl-auto=create-drop
